Fix overflowing text on subtitle

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -70,6 +70,16 @@
     line-height:0px;
     padding-top:5px;
     color:var(--header-dark-text);
+    position:relative;
+}
+
+.header--subtitle-text {
+    display:flex;
+    width:100%;
+    height:20px;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap:nowrap;
 }
 
 .header--subtitle-shrink {
